--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <body class="body">
  
   <div id="particles-js"></div>
-  <nav id="nav"></nav>
-  <header id="header"></header>
+  <!-- <nav id="nav"></nav>
+  <header id="header"></header> -->
   
   <div id="root"></div>
   <script src="particles.min.js"></script>
